--- a/PlataformaDKUCorp/Properties/Resources.resx
+++ b/PlataformaDKUCorp/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="refresh_FILL0_wght400_GRAD0_opsz48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\refresh_FILL0_wght400_GRAD0_opsz48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="javiergod" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\javiergod.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
